# linear_regression_from_scratch

./: README.md  main.py  pyproject.toml  regression_1.ipynb  regression_2.ipynb
